[package]
name = "wire"
version = "0.1.0"
authors = ["Adil Mohiuddin <amohi9046@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
async-tungstenite = "0.15.0"
toml = "0.5.8"
serde = "1.0.130"
postgres-types = "0.2.1"
sqlx = { version = "0.5.7", features = ["postgres", "runtime-tokio-rustls"] }
axum = "0.2.5"
tower-http = { git = "https://github.com/tower-rs/tower-http/", branch = "cors", features = ["cors"] } 
rust-argon2 = "0.8.3"
rand = "0.8.4"
validator = { version = "0.14.0", features = ["derive"] }
http = "0.2.5"
